# swagger.json
@@ -118,6 +118,37 @@
                 }
             }
         },
+        "/api/users/refresh": {
+            "get": {
+                "tags": ["Auth"],
+                "produces": [
+          "application/json"
+        ],
+                "summary": "Refresh token",
+                "parameters": [],
+                "security":[{"Bearer":[]}],
+                "responses" : {
+                    "200" : {
+                        "description": "Ok",
+                        "content" : {
+                             "application/json" : {
+                             "schema" :{
+                                    "$ref": "#/components/schemas/LoginResponse"
+                             }
+                        }
+                        }
+                    },
+                    "401" : {
+                        "description": "Unauthorized",
+                        "content" : {}
+                    },
+                    "404" : {
+                        "description": "User not found",
+                        "content" : {}
+                    }
+                }
+            }
+        },
         "/api/users/logout": {
             "get": {
                 "tags": ["Auth"],
@@ -316,35 +347,9 @@
             "content": {}
           }          
                 }
-            },
-            "get": {
-                "tags": ["Diet"],
-                "summary": "User diet",
-                "parameters": [],
-                "security": [{"Bearer": []}],
-                "responses" : {
-                    "200" : {
-                        "description": "Succesfull",
-                        "content" : {
-                            "application/json" : {
-                            "schema" :{
-                                    "$ref": "#/components/schemas/AllDietResponse"
-                            }
-                        }
-                        }
-                    },
-                         "400": {
-            "description": "Bad Request",
-            "content": {}
-          }   ,
-                       "401": {
-            "description": "Unauthorized",
-            "content": {}
-          }   
-                }
             }
         },
-        "/api/diet/personal": {
+        "/api/diet": {
             "post": {
                 "tags": ["Diet"],
                 "summary": "Diet for auth users",
@@ -376,6 +381,32 @@
             "description": "Bad Request",
             "content": {}
           }          
+                }
+            },
+            "get": {
+                "tags": ["Diet"],
+                "summary": "User diet",
+                "parameters": [],
+                "security": [{"Bearer": []}],
+                "responses" : {
+                    "200" : {
+                        "description": "Succesfull",
+                        "content" : {
+                            "application/json" : {
+                            "schema" :{
+                                    "$ref": "#/components/schemas/AllDietResponse"
+                            }
+                        }
+                        }
+                    },
+                         "400": {
+            "description": "Bad Request",
+            "content": {}
+          }   ,
+                       "401": {
+            "description": "Unauthorized",
+            "content": {}
+          }   
                 }
             }
         },
@@ -487,7 +518,7 @@
         "/api/daily/" :{
             "get": {
                 "tags": ["Daily products"],
-                "summary": "Daily products",
+                "summary": "Daily products, find products by date",
                 "parameters": [
                     {
 "name": "date",
@@ -600,6 +631,10 @@
                         "email": {
                             "type": "string",
                             "format":"email"
+                        },
+                        "username": {
+                            "type": "string",
+                            "format":"John Dou"
                         }
                     }
                 }
@@ -627,7 +662,7 @@
             },         
              "CurrentResponse" : {
              "type": "object",
-                "required": ["email","username"],
+                "required": ["email","username","_id"],
                 "properties" : {
                  "username" : {
                     "type": "string",
@@ -638,6 +673,11 @@
                     "type": "string",
                     "description" : "User email",
                     "format": "email"
+                },
+                "_id" : {
+                    "type": "string",
+                    "description" : "User ID",
+                    "example":"9379992a"
                 }
             }
             },
